--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- Home -->
+  <section id="home" class="section">
+    <img src="images/profile.jpg" alt="Profile" class="profile-img" />
+    <h1>Jane Doe</h1>
+    <p class="tagline">Cybersecurity Enthusiast | Web Developer | Problem Solver</p>
+  </section>
+
+  <!-- Resume -->
+  <section id="resume" class="section">
+    <h2>Resume</h2>
+    <div class="resume-block">
+      <h3>Education</h3>
+      <p>BSc. Computer Science - XYZ University (2020-2024)</p>
+
+      <h3>Experience</h3>
+      <p>Intern, CyberSec Labs (2023) - Performed penetration tests and log analysis.</p>
+
+      <h3>Certifications</h3>
+      <ul>
+        <li>CompTIA Security+</li>
+        <li>Certified Ethical Hacker (CEH)</li>
+      </ul>
+
+      <h3>Skills</h3>
+      <ul>
+        <li>Python, JavaScript, HTML/CSS, Bash</li>
+        <li>OWASP ZAP, Wireshark, Nmap, Burp Suite</li>
+        <li>Linux, Git, REST APIs</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="project">
+      <img src="images/project1.png" alt="Project 1"/>
+      <h4>Vulnerability Scanner</h4>
+      <p>Built a web-based tool using Django + React to scan websites for known CVEs.</p>
+    </div>
+    <div class="project">
+      <img src="images/project2.png" alt="Project 2"/>
+      <h4>Phishing Detection Model</h4>
+      <p>Developed an ML model that detects phishing URLs using Scikit-learn.</p>
+    </div>
+    <div class="project">
+      <img src="images/project3.png" alt="Project 3"/>
+      <h4>Student Portal</h4>
+      <p>Created a full-stack student portal with assignments, certificates, and tracking.</p>
+    </div>
+  </section>
+
+  <!-- Lab Challenges -->
+  <section id="labs" class="section">
+    <h2>Lab Challenges</h2>
+    <div class="lab">
+      <h4>CTF - SQL Injection Challenge</h4>
+      <p><strong>Problem:</strong> Gain unauthorized access via login form</p>
+      <p><strong>Approach:</strong> Tested input validation, tried `' OR '1'='1`</p>
+      <p><strong>Tools:</strong> Burp Suite, browser DevTools</p>
+      <img src="images/lab1.png" alt="SQLi Challenge" />
+      <p><strong>Lessons:</strong> Importance of parameterized queries and input sanitization.</p>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:jane.doe@example.com">jane.doe@example.com</a></p>
+    <p>Phone: +123-456-7890</p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/janedoe" target="_blank">linkedin.com/in/janedoe</a></p>
+    <p>GitHub: <a href="https://github.com/janedoe" target="_blank">github.com/janedoe</a></p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
