--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Home -->
   <section id="home" class="section">
-    <img src="DSCN4281.JPG" alt="Profile" class="profile-img" />
+    <img src="images/DSCN4281.JPG" alt="Profile" class="profile-img" />
     <h1>Jane Doe</h1>
     <p class="tagline">Cybersecurity Enthusiast | Web Developer | Problem Solver</p>
   </section>
