--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Resume</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <nav> ... </nav>
+  <section id="resume" class="section">
+    <h2>Resume</h2>
+    <!-- resume content as before -->
+  </section>
+</body>
+</html>
 
