--- a/resume.html
+++ b/resume.html
@@ -3,15 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resume</title>
+  <title>Resume | Jane Doe</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <nav> ... </nav>
+
+  <!-- Navbar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html" class="active">Resume</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="labs.html">Lab Challenges</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Resume Section -->
   <section id="resume" class="section">
     <h2>Resume</h2>
-    <!-- resume content as before -->
+
+    <h3>Education</h3>
+    <p>BSc. Computer Science - XYZ University (2020–2024)</p>
+
+    <h3>Experience</h3>
+    <p>Intern, CyberSec Labs (2023) – Performed penetration testing and log analysis.</p>
+
+    <h3>Certifications</h3>
+    <ul>
+      <li>CompTIA Security+</li>
+      <li>Certified Ethical Hacker (CEH)</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <ul>
+      <li>Languages: Python, JavaScript, HTML/CSS, Bash</li>
+      <li>Tools: OWASP ZAP, Wireshark, Nmap, Burp Suite</li>
+      <li>Others: Linux, Git, REST APIs</li>
+    </ul>
   </section>
+
 </body>
 </html>
-
