--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Projects | Jane Doe</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="projects.html" class="active">Projects</a></li>
+      <li><a href="labs.html">Lab Challenges</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Projects Section -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <img src="images/project1.png" alt="Project 1" />
+      <h4>Vulnerability Scanner</h4>
+      <p>Built a web-based tool using Django + React to scan websites for known CVEs.</p>
+    </div>
+
+    <div class="project">
+      <img src="images/project2.png" alt="Project 2" />
+      <h4>Phishing Detection Model</h4>
+      <p>Developed an ML model that detects phishing URLs using Scikit-learn.</p>
+    </div>
+
+    <div class="project">
+      <img src="images/project3.png" alt="Project 3" />
+      <h4>Student Portal</h4>
+      <p>Created a full-stack student portal with assignments, certificates, and tracking.</p>
+    </div>
+  </section>
+
+</body>
+</html>
 
