--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Jane Doe Portfolio</title>
+  <title>Home | Marcos Solomon Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -23,14 +23,23 @@
   <section id="home" class="section home-section">
     <div class="home-content">
       <img src="/images/DSCN4281.JPG" alt="Profile Picture" class="profile-img" />
-      <h1>Jane Doe</h1>
-      <p class="tagline">Cybersecurity Enthusiast | Web Developer | Problem Solver</p>
+      <h1>Marcos Solomon</h1>
+      <p class="tagline">Cybersecurity Analyst | Vulnerability Researcher | Tech Explorer</p>
+      
+      <p class="intro">
+        I’m a passionate cybersecurity analyst with hands-on experience in vulnerability scanning,
+        penetration testing, and digital forensics. I thrive on solving complex security problems and
+        turning insights into actionable defense strategies. This portfolio showcases my projects, training labs,
+        and achievements in the field of cybersecurity.
+      </p>
+
+      <a href="resume.html" class="btn">View My Resume</a>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Jane Doe. All rights reserved.</p>
+    <p>&copy; 2025 Marcos Solomon. All rights reserved.</p>
   </footer>
 
 </body>
