--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resume | Jane Doe</title>
+  <title>Resume | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -24,22 +24,30 @@
     <h2>Resume</h2>
 
     <h3>Education</h3>
-    <p>BSc. Computer Science - XYZ University (2020–2024)</p>
-
-    <h3>Experience</h3>
-    <p>Intern, CyberSec Labs (2023) – Performed penetration testing and log analysis.</p>
+    <p><strong>Bachelor in Business Information Technology</strong><br>
+    University Name (Year - Year)</p>
 
     <h3>Certifications</h3>
     <ul>
-      <li>CompTIA Security+</li>
-      <li>Certified Ethical Hacker (CEH)</li>
+      <li>Certified Ethical Hacker (CEH) – Alison</li>
+      <li>Web Security Fundamentals – Udemy</li>
+      <li>Python for Ethical Hacking – Online Course</li>
+      <li>... more certifications to be added</li>
     </ul>
+
+    <h3>Professional Training</h3>
+    <p>
+      I have been actively involved in training corporate personnel in cybersecurity practices 
+      and digital forensics. These sessions were directed under the <strong>Society of Forensics and Researchers Association (SOFSREA)</strong>, 
+      aiming to equip professionals with practical skills in security auditing, vulnerability scanning, and cyber hygiene awareness. 
+      More trainings and sessions will be added.
+    </p>
 
     <h3>Skills</h3>
     <ul>
-      <li>Languages: Python, JavaScript, HTML/CSS, Bash</li>
-      <li>Tools: OWASP ZAP, Wireshark, Nmap, Burp Suite</li>
-      <li>Others: Linux, Git, REST APIs</li>
+      <li><strong>Languages:</strong> Python, JavaScript, HTML/CSS, Bash</li>
+      <li><strong>Tools:</strong> OWASP ZAP, Wireshark, Nmap, Burp Suite, Metasploit</li>
+      <li><strong>Platforms:</strong> Linux, Windows, VirtualBox, Git, REST APIs</li>
     </ul>
   </section>
 
