--- a/labs.html
+++ b/labs.html
@@ -30,7 +30,10 @@
         <p><strong>Problem:</strong> Bypass authentication via vulnerable login form</p>
         <p><strong>Approach:</strong> Used `' OR '1'='1` payload</p>
         <p><strong>Tools:</strong> Burp Suite, browser DevTools</p>
-        <img src="https://marcos-solo.github.io/images/screen1.png" alt="SQLi Screenshot" />
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen1.png" alt="SQLi Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen1a.png" alt="SQLi Screenshot 2" />
+        </div>
         <p><strong>Lessons Learned:</strong> Importance of parameterized queries</p>
       </div>
 
@@ -38,32 +41,47 @@
         <h4>XSS Detection and Exploitation</h4>
         <p><strong>Problem:</strong> Reflected XSS in search input</p>
         <p><strong>Tools:</strong> Burp Suite, browser console</p>
-        <img src="https://marcos-solo.github.io/images/screen2.png" alt="XSS Screenshot" />
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen2.png" alt="XSS Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen2a.png" alt="XSS Screenshot 2" />
+        </div>
         <p><strong>Lessons:</strong> Input sanitization and CSP headers</p>
       </div>
 
       <div class="lab">
         <h4>Command Injection</h4>
-        <img src="https://marcos-solo.github.io/images/screen3.png" alt="Command Injection Screenshot" />
         <p><strong>Summary:</strong> Executed OS commands via unsanitized input fields</p>
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen3.png" alt="Command Injection Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen3a.png" alt="Command Injection Screenshot 2" />
+        </div>
       </div>
 
       <div class="lab">
         <h4>Directory Traversal</h4>
-        <img src="https://marcos-solo.github.io/images/screen4.png" alt="Directory Traversal Screenshot" />
         <p><strong>Summary:</strong> Accessed restricted files via `../` traversal</p>
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen4.png" alt="Dir Traversal Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen4a.png" alt="Dir Traversal Screenshot 2" />
+        </div>
       </div>
 
       <div class="lab">
         <h4>Broken Authentication Exploit</h4>
-        <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Auth Screenshot" />
         <p><strong>Summary:</strong> Gained unauthorized access using session ID manipulation</p>
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Auth Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen5a.png" alt="Broken Auth Screenshot 2" />
+        </div>
       </div>
 
       <div class="lab">
         <h4>Privilege Escalation</h4>
-        <img src="https://marcos-solo.github.io/images/screen6.png" alt="Privilege Escalation Screenshot" />
         <p><strong>Summary:</strong> Escalated privileges through misconfigured sudo access</p>
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen6.png" alt="Priv Escalation Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Priv Escalation Screenshot 2" />
+        </div>
       </div>
 
     </div>
