--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
   <section id="contact" class="section">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:jane.doe@example.com">jane.doe@example.com</a></p>
-    <p>Phone: +123-456-7890</p>
+    <p>Phone: +254 0741840839</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/janedoe" target="_blank">linkedin.com/in/janedoe</a></p>
-    <p>GitHub: <a href="https://github.com/janedoe" target="_blank">github.com/janedoe</a></p>
+    <p>GitHub: <a href="https://github.com/janedoe" target="_blank">github.com/marcos-solo</a></p>
   </section>
 
 </body>
