--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <!-- Contact Section -->
   <section id="contact" class="section">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:jane.doe@example.com">jane.doe@example.com</a></p>
+    <p>Email: <a href="mailto:jane.doe@example.com">solomonmarcos34@gmail.com</a></p>
     <p>Phone: +254 0741840839</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/janedoe" target="_blank">linkedin.com/in/janedoe</a></p>
     <p>GitHub: <a href="https://github.com/janedoe" target="_blank">github.com/marcos-solo</a></p>
