--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
+
+  <style>
+    /* Additional Styling Specific to Contact Page */
+    #contact {
+      text-align: center;
+      font-size: 1.1rem;
+      padding: 2rem;
+    }
+
+    #contact a {
+      color: #00bcd4;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    #contact a:hover {
+      text-decoration: underline;
+      color: #0097a7;
+    }
+
+    #contact p {
+      margin: 0.8rem 0;
+    }
+  </style>
 </head>
 <body>
 
@@ -22,7 +46,7 @@
   <!-- Contact Section -->
   <section id="contact" class="section">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:jane.doe@example.com">solomonmarcos34@gmail.com</a></p>
+    <p>Email: <a href="mailto:solomonmarcos34@gmail.com">solomonmarcos34@gmail.com</a></p>
     <p>Phone: +254 0741840839</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/janedoe" target="_blank">linkedin.com/in/janedoe</a></p>
     <p>GitHub: <a href="https://github.com/marcos-solo" target="_blank">github.com/marcos-solo</a></p>
@@ -30,4 +54,3 @@
 
 </body>
 </html>
-
