--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resume | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .download-btn {
+      display: inline-block;
+      margin: 1.5rem 0;
+      padding: 0.7rem 1.4rem;
+      background-color: #00bcd4;
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      border-radius: 6px;
+      transition: background 0.3s ease;
+    }
+
+    .download-btn:hover {
+      background-color: #0097a7;
+    }
+  </style>
 </head>
 <body>
 
@@ -22,6 +39,9 @@
   <!-- Resume Section -->
   <section id="resume" class="section">
     <h2>Resume</h2>
+
+    <!-- Download CV Button -->
+    <a href="Marcos_Solomon_CV.pdf" download class="download-btn">Download My CV (PDF)</a>
 
     <h3>Education</h3>
     <p><strong>Bachelor in Business Information Technology</strong><br>
