--- a/resume.html
+++ b/resume.html
@@ -41,11 +41,11 @@
     <h2>Resume</h2>
 
     <!-- Download CV Button -->
-    <a href="Marcos_Solomon_CV.pdf" download class="download-btn">Download My CV (PDF)</a>
+    <a href="/files/marcos_solomon_CS-SA10-25038.pdf" download class="download-btn">Download My CV (PDF)</a>
 
     <h3>Education</h3>
     <p><strong>Bachelor in Business Information Technology</strong><br>
-    University Name (Year - Year)</p>
+    University Name (2021 - 2025)</p>
 
     <h3>Certifications</h3>
     <ul>
