--- a/resume.html
+++ b/resume.html
@@ -5,23 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resume | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .download-btn {
-      display: inline-block;
-      margin: 1.5rem 0;
-      padding: 0.7rem 1.4rem;
-      background-color: #00bcd4;
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
-      border-radius: 6px;
-      transition: background 0.3s ease;
-    }
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-    .download-btn:hover {
-      background-color: #0097a7;
-    }
-  </style>
+
 </head>
 <body>
 
@@ -51,10 +37,9 @@
 
     <h3>Certifications</h3>
     <ul>
-      <li>Certified Ethical Hacker (CEH) – Alison</li>
-      <li>Web Security Fundamentals – Udemy</li>
+      <li><i class="fas fa-shield-alt"></i> Certified Ethical Hacker (CEH) – Alison</li>
+      <li><i class="fas fa-globe"></i> Web Security Fundamentals – Udemy</li>
       <li>Python for Ethical Hacking – Online Course</li>
-      <li>... more certifications to be added</li>
     </ul>
 
     <h3>Professional Training</h3>
@@ -62,7 +47,6 @@
       I have been actively involved in training corporate personnel in cybersecurity practices 
       and digital forensics. These sessions were directed under the <strong>Society of Forensics and Researchers Association (SOFSREA)</strong>, 
       aiming to equip professionals with practical skills in security auditing, vulnerability scanning, and cyber hygiene awareness. 
-      More trainings and sessions will be added.
     </p>
 
     <h3>Skills</h3>
