--- a/labs.html
+++ b/labs.html
@@ -80,7 +80,16 @@
         <p><strong>Summary:</strong> Escalated privileges through misconfigured sudo access</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen6.png" alt="Priv Escalation Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Priv Escalation Screenshot 2" />
+          <img src="https://marcos-solo.github.io/images/screena.png" alt="Priv Escalation Screenshot 2" />
+        </div>
+      </div>
+      
+      <div class="lab">
+        <h4>Privilege Escalation</h4>
+        <p><strong>Summary:</strong> Escalated privileges through misconfigured sudo access</p>
+        <div class="lab-images">
+          <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Priv Escalation Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screeba.png" alt="Priv Escalation Screenshot 2" />
         </div>
       </div>
 
