--- a/labs.html
+++ b/labs.html
@@ -32,7 +32,7 @@
         <p><strong>Tools:</strong> Burp Suite, browser DevTools</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen1.png" alt="SQLi Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screen1a.png" alt="SQLi Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screen1a.png" alt="SQLi Screenshot 2" /> -->
         </div>
         <p><strong>Lessons Learned:</strong> Importance of parameterized queries</p>
       </div>
@@ -43,7 +43,7 @@
         <p><strong>Tools:</strong> Burp Suite, browser console</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen2.png" alt="XSS Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screen2a.png" alt="XSS Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screen2a.png" alt="XSS Screenshot 2" /> -->
         </div>
         <p><strong>Lessons:</strong> Input sanitization and CSP headers</p>
       </div>
@@ -53,7 +53,7 @@
         <p><strong>Summary:</strong> Executed OS commands via unsanitized input fields</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen3.png" alt="Command Injection Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screen3a.png" alt="Command Injection Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screen3a.png" alt="Command Injection Screenshot 2" /> -->
         </div>
       </div>
 
@@ -62,7 +62,7 @@
         <p><strong>Summary:</strong> Accessed restricted files via `../` traversal</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen4.png" alt="Dir Traversal Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screen4a.png" alt="Dir Traversal Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screen4a.png" alt="Dir Traversal Screenshot 2" /> -->
         </div>
       </div>
 
@@ -71,7 +71,7 @@
         <p><strong>Summary:</strong> Gained unauthorized access using session ID manipulation</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Auth Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screen5a.png" alt="Broken Auth Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screen5a.png" alt="Broken Auth Screenshot 2" /> -->
         </div>
       </div>
 
@@ -80,7 +80,7 @@
         <p><strong>Summary:</strong> Escalated privileges through misconfigured sudo access</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen6.png" alt="Priv Escalation Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screena.png" alt="Priv Escalation Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screena.png" alt="Priv Escalation Screenshot 2" /> -->
         </div>
       </div>
       
@@ -89,7 +89,7 @@
         <p><strong>Summary:</strong> Escalated privileges through misconfigured sudo access</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Priv Escalation Screenshot 1" />
-          <img src="https://marcos-solo.github.io/images/screeba.png" alt="Priv Escalation Screenshot 2" />
+<!--           <img src="https://marcos-solo.github.io/images/screeba.png" alt="Priv Escalation Screenshot 2" /> -->
         </div>
       </div>
 
