--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,7 @@
   <section id="projects" class="section">
     <h2>Projects</h2>
 
+    <!-- Existing Projects -->
     <div class="project">
       <img src="images/project1.png" alt="Project 1" />
       <h4>Vulnerability Scanner</h4>
@@ -40,8 +41,32 @@
       <h4>Student Portal</h4>
       <p>Created a full-stack student portal with assignments, certificates, and tracking.</p>
     </div>
+
+    <!-- Added: Penetration Testing Projects -->
+    <div class="project">
+      <h4>Penetration Testing</h4>
+      <ul>
+        <li><a href="https://ho.bethsaidamedicareinstitute.co.ke" target="_blank">ho.bethsaidamedicareinstitute.co.ke</a></li>
+        <li><a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" target="_blank">sofsrea.bethsaidamedicareinstitute.co.ke</a></li>
+        <li><a href="https://memba.websealinternational.com" target="_blank">memba.websealinternational.com</a></li>
+      </ul>
+      <p>Performed comprehensive penetration testing and reported on vulnerabilities, misconfigurations, and security hardening recommendations.</p>
+    </div>
+
+    <!-- Added: GitHub Repositories -->
+    <div class="project">
+      <h4>Hospital DSS System</h4>
+      <p>Developed a hospital decision support system using Django, React, and MySQL.</p>
+      <a class="download-btn" href="https://github.com/marcos-solo/hosi_dss" target="_blank">View on GitHub</a>
+    </div>
+
+    <div class="project">
+      <h4>Tea Harvester Weather Checker</h4>
+      <p>Created a system that fetches and analyzes weather data to aid tea harvesting decisions.</p>
+      <a class="download-btn" href="https://github.com/marcos-solo/tea_harvester_weather-checker" target="_blank">View on GitHub</a>
+    </div>
+
   </section>
 
 </body>
 </html>
-
