--- a/projects.html
+++ b/projects.html
@@ -191,8 +191,8 @@
     <!-- Tested Systems -->
     <div class="project">
       <img src="images/project3.png" alt="Bethsaida Main" />
-      <h4>Bethsaida Medicare Main Site</h4>
-      <p>Performed penetration testing on the hospital's primary domain.</p>
+      <h4>Shop manager</h4>
+      <p>Performed penetration testing on the shop management primary domain.</p>
       <div class="btn-group">
         <a href="https://ho.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
       </div>
