--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Projects | Jane Doe</title>
+  <title>Projects | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Reset and Base Styles */
