--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Home Section -->
   <section id="home" class="section home-section">
     <div class="home-content">
-      <img src="/images/DSCN4281.JPG" alt="Profile Picture" class="profile-img" />
+      <img src="/images/portfolio.jpeg" alt="Profile Picture" class="profile-img" />
       <h1>Marcos Solomon</h1>
       <p class="tagline">Cybersecurity Analyst | Vulnerability Researcher | Tech Explorer</p>
       
