--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
       <a href="resume.html" class="btn">View My Resume</a>
     </div>
   </section>
+  <script>
+  document.querySelectorAll('.navbar a').forEach(link => {
+    link.addEventListener('click', function(e) {
+      // Prevent immediate navigation
+      e.preventDefault();
+
+      // Add fade-out animation
+      document.body.classList.add('fade-out');
+
+      // Navigate after animation (adjust time if needed)
+      setTimeout(() => {
+        window.location.href = this.href;
+      }, 500); // match animation duration
+    });
+  });
+</script>
+
 
 </body>
 </html>
