--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="home-content">
       <img src="/images/port1.jpeg" alt="Profile Picture" class="profile-img" />
       <h1>Marcos Solomon</h1>
-      <p class="tagline">Cybersecurity Analyst | Vulnerability Researcher | Tech Explorer</p>
+      <p class="tagline">Cybersecurity Analyst | Penetration Tester </p>
       
       <p class="intro">
         I’m a passionate cybersecurity analyst with hands-on experience in vulnerability scanning,
